fix background layering on safari

--- a/src/Custom.scss
+++ b/src/Custom.scss
@@ -299,7 +299,6 @@ blockquote {
 
   width: 100%;
   height: 100%;
-  z-index: -4;
   opacity: 1;
 }
 
@@ -313,7 +312,6 @@ blockquote {
 
   width: 100%;
   height: 100%;
-  z-index: -3;
   background: linear-gradient(to bottom,  rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
 }
 
@@ -334,7 +332,6 @@ textarea {
   height: 30vh;
   background-size: cover;
   background-position: center;
-  z-index: -1;
   box-shadow: inset 0 -3px 10px -10px #000000, inset 0 10px 10px -10px #000000;
 }
 
